# plot

./: CMakeLists.txt  Plot.cpp  Plot.h  Surface.cpp  Surface.h  build.sh  clean.sh  generate.sh  main.cpp
src/: Plot.cpp  Plot.h  Surface.cpp  Surface.h  main.cpp
src/raytracer/: camera.cpp  camera.h  hitable.h  hitablelist.cpp  hitablelist.h  material.cpp  material.h  random.h  ray.h  sphere.cpp  sphere.h  vec3.h  world.h
